--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -7,8 +7,8 @@ html {
   font-size: var(--font-size);
 }
 
-.prose-bg {
-  @apply prose prose-code:bg-base-200;
+.slide {
+  @apply prose prose-code:bg-base-200 py-20 px-8;
 }
 
 body {
