--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -8,7 +8,7 @@ html {
 }
 
 .slide {
-  @apply prose prose-code:bg-base-200 py-20 px-8;
+  @apply prose prose-code:bg-base-200 my-20 mx-8 w-full px-4;
 }
 
 body {
