--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -8,7 +8,20 @@ html {
 }
 
 .slide {
-  @apply prose prose-code:bg-base-200 my-20 mx-8 w-full px-4;
+  @apply prose prose-code:bg-base-200 m-8 mb-16 w-full px-6;
+}
+
+.cssBox {
+  transition-property: transform;
+  transition-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1);
+  transition-duration: 2s;
+  width: 5rem;
+  height: 5rem;
+  background: #000;
+}
+
+.active {
+  transform: translateX(200px);
 }
 
 body {
