--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -11,17 +11,44 @@ html {
   @apply prose prose-code:bg-base-200 m-8 mb-16 w-full px-6;
 }
 
-.cssBox {
-  transition-property: transform;
-  transition-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1);
-  transition-duration: 2s;
+.box {
   width: 5rem;
   height: 5rem;
-  background: #000;
+  @apply rounded-lg;
 }
 
-.active {
-  transform: translateX(200px);
+.box-state-0 {
+  transition-duration: 1s;
+  transform: translate3d(0px, 0px, 0px);
+  @apply bg-primary;
+}
+.box-state-1 {
+  transition-duration: 1s;
+  transform: translate3d(20vmin, 0px, 0px) rotate(45deg);
+  @apply bg-secondary;
+}
+.box-state-2 {
+  transition-duration: 1s;
+  transform: translate3d(40vmin, 0px, 0px) rotate(90deg);
+  @apply bg-accent;
+}
+.box-state-3 {
+  transition-duration: 1s;
+  transform: translate3d(60vmin, 0px, 0px) rotate(135deg);
+  @apply bg-warning;
+}
+
+.box-invisible {
+  visibility: hidden;
+  transition-duration: 0.3s;
+  transform: scale(0);
+  opacity: 0;
+}
+
+.box-visible {
+  transition-duration: 0.3s;
+  transform: scale(1);
+  opacity: 1;
 }
 
 body {
@@ -29,7 +56,7 @@ body {
 }
 
 ::-webkit-scrollbar {
-  width: 15px;
+  width: 16px;
 }
 
 /* Track */
