--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1,110 +1,9 @@
+@import "./defaults.css";
+@import "./boxes.css";
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-/* Defaults */
-html {
-  font-size: var(--font-size);
-}
-
 .slide {
   @apply prose prose-code:bg-base-200 m-8 mb-16 w-full px-6;
-}
-
-.box {
-  transition-property: transform, background-color;
-  width: 5rem;
-  height: 5rem;
-  @apply rounded-lg;
-}
-
-.box-state-0 {
-  transition-duration: 1s;
-  transform: translate3d(0px, 0px, 0px);
-  @apply bg-primary;
-}
-.box-state-1 {
-  transition-duration: 1s;
-  transform: translate3d(20vmin, 0px, 0px) rotate(45deg);
-  @apply bg-secondary;
-}
-.box-state-2 {
-  transition-duration: 3s;
-  transform: translate3d(40vmin, 0px, 0px) rotate(90deg);
-  @apply bg-accent;
-}
-.box-state-3 {
-  transition-duration: 1s;
-  transform: translate3d(60vmin, 0px, 0px) rotate(135deg);
-  @apply bg-neutral;
-}
-
-.box-invisible {
-  transition-duration: 0.3s;
-  transform: scale(0);
-  opacity: 0;
-}
-
-.box-visible {
-  transition-duration: 0.3s;
-  transform: scale(1);
-  opacity: 1;
-  @apply bg-primary;
-}
-
-body {
-  overflow: overlay;
-}
-
-::-webkit-scrollbar {
-  width: 16px;
-}
-
-/* Track */
-::-webkit-scrollbar-track {
-  background: none;
-}
-
-/* Handle */
-::-webkit-scrollbar-thumb {
-  border: 3px solid rgba(0, 0, 0, 0);
-  background-clip: padding-box;
-  border-radius: 1rem;
-  background-color: rgba(101, 101, 101, 0.5);
-}
-
-/* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-  border: 3px solid rgba(0, 0, 0, 0);
-  background-clip: padding-box;
-  border-radius: 1rem;
-  background-color: rgba(35, 35, 35, 0.8);
-}
-
-:root {
-  --font-size: 16px;
-}
-
-@media (min-width: 576px) {
-  :root {
-    --font-size: 17px;
-  }
-}
-
-@media (min-width: 768px) {
-  :root {
-    --font-size: 18px;
-  }
-}
-
-@media (min-width: 992px) {
-  :root {
-    --font-size: 19px;
-  }
-}
-
-@media (min-width: 1200px) {
-  :root {
-    --font-size: 20px;
-  }
 }
