--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -5,5 +5,5 @@
 @tailwind utilities;
 
 .slide {
-  @apply prose prose-code:bg-base-200 my-8 mb-16 w-full px-6;
+  @apply prose prose-code:bg-base-200 my-8 mb-16 w-full px-6 max-w-screen-md;
 }
