migrate to v2 routes and add content

--- a/app/styles/defaults.css
+++ b/app/styles/defaults.css
@@ -1,10 +1,14 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400;1,700&display=swap");
+
 /* Defaults */
 html {
   font-size: var(--font-size);
 }
 
 body {
-  overflow: overlay;
+  overflow-x: hidden;
+  overflow-y: overlay;
+  font-family: "Roboto", sans-serif;
 }
 
 ::-webkit-scrollbar {
